; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_variable.c_mrb_obj_iv_set_force.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_variable.c_mrb_obj_iv_set_force.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RObject = type { i64 }
%struct.RBasic = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mrb_obj_iv_set_force(i32* %0, %struct.RObject* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.RObject*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.RObject* %1, %struct.RObject** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = load %struct.RObject*, %struct.RObject** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @assign_class_name(i32* %9, %struct.RObject* %10, i32 %11, i32 %12)
  %14 = load %struct.RObject*, %struct.RObject** %6, align 8
  %15 = getelementptr inbounds %struct.RObject, %struct.RObject* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %23, label %18

18:                                               ; preds = %4
  %19 = load i32*, i32** %5, align 8
  %20 = call i64 @iv_new(i32* %19)
  %21 = load %struct.RObject*, %struct.RObject** %6, align 8
  %22 = getelementptr inbounds %struct.RObject, %struct.RObject* %21, i32 0, i32 0
  store i64 %20, i64* %22, align 8
  br label %23

23:                                               ; preds = %18, %4
  %24 = load i32*, i32** %5, align 8
  %25 = load %struct.RObject*, %struct.RObject** %6, align 8
  %26 = getelementptr inbounds %struct.RObject, %struct.RObject* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @iv_put(i32* %24, i64 %27, i32 %28, i32 %29)
  %31 = load i32*, i32** %5, align 8
  %32 = load %struct.RObject*, %struct.RObject** %6, align 8
  %33 = bitcast %struct.RObject* %32 to %struct.RBasic*
  %34 = call i32 @mrb_write_barrier(i32* %31, %struct.RBasic* %33)
  ret void
}

declare dso_local i32 @assign_class_name(i32*, %struct.RObject*, i32, i32) #1

declare dso_local i64 @iv_new(i32*) #1

declare dso_local i32 @iv_put(i32*, i64, i32, i32) #1

declare dso_local i32 @mrb_write_barrier(i32*, %struct.RBasic*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
